# dashboard_School

./: .gitignore  README.md  alunos.db  alunos.db.bak  app.py  pyproject.toml
src/dashboard_school/: layout.py  main.py  processing.py
src/dashboard_school/components/: dashboard.py  layout.py
src/dashboard_school/modules/: connection.py  models.py
tests/: test_integration.py  test_system.py  test_unit_processing.py
