[project]
name = "dashboard_school"
version = "0.1.0"
description = "Dashboard de Análise Acadêmica Universitária"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.3.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "plotly>=6.5.0",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
]

# DIZER AO PYPI/UV QUE O PACOTE ESTÁ DENTRO DE "src"
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
